# Deskemy

./: LICENSE  PLAN.md  README.md  ROADMAP.md  package-lock.json  package.json  vite.config.js
Images/: Images.md
docs/: player-compositing.md  v1.1-plan.md  v1.2.2-plan.md  visual-overhaul.md
src/: app.css
src-tauri/: .gitignore  Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dbcheck.rs  import_sample.rs  probe_mpv.rs  searchcheck.rs  statscheck.rs  subcheck.rs
src-tauri/icons/: icon.icns
src-tauri/licenses/: libmpv-NOTICE.txt
src-tauri/src/: backup.rs  compositor.rs  config.rs  domain.rs  error.rs  hashing.rs  lib.rs  main.rs  state.rs  subtitles.rs  thumbnails.rs  watcher.rs
src-tauri/src/commands/: mod.rs  player.rs
src-tauri/src/db/: mod.rs  queries.rs
src-tauri/src/importer/: mod.rs  structure.rs
src-tauri/src/media/: mod.rs  mpv_prober.rs  stub.rs
src-tauri/src/mpv/: mod.rs
src-tauri/src/player/: mod.rs
src-tauri/src/scanner/: mod.rs
src-tauri/tests/: importer_test.rs
src/lib/: api.ts  format.ts  types.ts  updates.svelte.ts
src/lib/components/: ContextMenu.svelte  CourseCard.svelte  ProgressBar.svelte  Sidebar.svelte  TopBar.svelte
src/lib/stores/: app.svelte.ts  contextmenu.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/bookmarks/: +page.svelte
src/routes/course/[id]/: +page.svelte
src/routes/favorites/: +page.svelte
src/routes/history/: +page.svelte
src/routes/search/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/stats/: +page.svelte
src/routes/tracks/: +page.svelte
src/routes/tracks/[id]/: +page.svelte
src/routes/watch/[lectureId]/: +page.svelte
